force-app/main/default/objects/Goal__c/fields/ComissionPercentTotal__c.field-meta.xml
<CustomField>
    <fullName>ComissionPercentTotal__c</fullName>
    <label>Porcentagem de Comissão</label>
    <summarizedField>GoalItem__c.AchievedPercent__c</summarizedField>
    <summaryForeignKey>GoalItem__c.Goal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>