force-app/main/default/objects/Goal__c/fields/ComissionValue__c.field-meta.xml
<CustomField>
    <fullName>ComissionValue__c</fullName>
    <formula>ComissionPercentTotal__c *  SalesTotalValue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor de Comissão</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>