force-app/main/default/objects/Goal__c/fields/SalesTotalValue__c.field-meta.xml
<CustomField>
    <fullName>SalesTotalValue__c</fullName>
    <label>Valor de Vendas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>