force-app/main/default/objects/Goal__c/validationRules/Seller_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Seller_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Seller__c )</errorConditionFormula>
    <errorDisplayField>Seller__c</errorDisplayField>
    <errorMessage>O vendedor não pode estar vazio.</errorMessage>
</ValidationRule>